# numba_mpi_test

./: pyproject.toml
numba_mpi_test/: main.py
