[tool.poetry]
name = "numba_mpi_test"
version = "0.1.0"
description = ""
authors = ["Wiktor Wolak <w.wolak@if.uz.zgora.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
numba-mpi = "^0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
py-main = "numba_mpi_test.main:main"
